--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -55,33 +55,27 @@ $isConfig = [
     <div>
         <p>
             On this page you see the exact products in the exact order
-            as your customers see it on <b>"<?= $categoryName; ?>"</b> category page.
-        </p>
-        <p>
+            as your customers see it on "<?= $categoryName; ?>" category page.<br>
             Drag & drop products to a specific position and pin it there to have the product displayed always in this position.
         </p>
-        <p>
+        <p class="info">
             Merchandising will create <a href="https://www.algolia.com/doc/guides/query-rules/query-rules-overview/" target="_blank">1 query rule</a>
             for each merchandised category. Each Algolia plan has a <a href="https://www.algolia.com/pricing" target="_blank">query rules quota</a>,
             which cannot be exceeded.<br>
-            When you'll try to merchandise a category and you're query rules quota will be hit,
-            you'll see an error on top of the page.
-        </p>
-        <p>
             Query rule is created only when a category contains at least one "pinned" product.
             When there are no "pinned" products, no query rule is created.
         </p>
     </div>
     <br>
     <label for="algolia_merchandising_autocomplete">
-        Add a product to the first position:
-        <input type="text" id="algolia_merchandising_autocomplete" />
+        <input type="text" id="algolia_merchandising_autocomplete" placeholder="Add another item to promote ..." />
     </label>
 
     <div class="admin__data-grid-wrap admin__data-grid-wrap-static algolia_merchandising_items_table">
         <table class="data-grid">
             <thead>
                 <tr>
+                    <th class="data-grid-th">Position</th>
                     <th class="data-grid-th">Image</th>
                     <th class="data-grid-th">ID</th>
                     <th class="data-grid-th">SKU</th>
@@ -93,24 +87,30 @@ $isConfig = [
             <tbody>
                 {{#hits}}
                     <tr data-objectid="{{ objectID }}" {{#_rankingInfo.promoted}}class="pinned"{{/_rankingInfo.promoted}}>
-                        <td class="image_cell"><img src="{{ image_url }}" width="60" /></td>
+                        <td class="position_cell">
+                            <span class="draggable-handle"></span>
+                        </td>
+                        <td class="image_cell"><img src="{{ image_url }}" width="57" /></td>
                         <td>{{ objectID }}</td>
                         <td>{{{ _highlightResult.sku.value }}}</td>
                         <td>{{{ _highlightResult.name.value }}}</td>
                         <td>{{ price.USD.default_formated }}</td>
-                        <td>
-                            <span class="up">
-                                <a href="#">⬆️</a> |
-                            </span>
-                            <span class="unpin_block">
-                                Pinned <a href="#" class="unpinIt">UNPIN IT</a>
-                            </span>
-                            <span class="pin_block">
-                                <a href="#" class="pinIt">PIN IT</a>
-                            </span>
-                            <span class="down">
-                                | <a href="#">⬇️</a>
-                            </span>
+                        <td class="actions">
+                            <a href="#" class="unpin_block unpinIt">Click to un-pin</a>
+
+                            <div class="pin_block">
+                                <a class="arrow up" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14" viewBox="0 0 11 14">
+                                        <path fill="#888" fill-rule="nonzero" d="M10.065 6.724c-.038.102-.125.169-.222.169h-3.55v6.834c0 .15-.108.273-.24.273H4.04c-.133 0-.24-.122-.24-.273V6.893H.24c-.098 0-.185-.067-.223-.168a.302.302 0 0 1 .052-.298L4.864.955a.227.227 0 0 1 .17-.08c.065 0 .126.029.17.08l4.809 5.471a.3.3 0 0 1 .052.298z"/>
+                                    </svg>
+                                ️</a>
+                                <a href="#" class="pinIt">PIN HERE</a>
+                                <a class="arrow down" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14" viewBox="0 0 11 14">
+                                        <path fill="#888" fill-rule="nonzero" d="M10.065 7.276c-.038-.102-.125-.169-.222-.169h-3.55V.273c0-.15-.108-.273-.24-.273H4.04c-.133 0-.24.122-.24.273v6.834H.24c-.098 0-.185.067-.223.168a.302.302 0 0 0 .052.298l4.794 5.472c.046.051.107.08.17.08a.228.228 0 0 0 .17-.08l4.809-5.471a.3.3 0 0 0 .052-.298z"/>
+                                    </svg>
+                                </a>
+                            </div>
                         </td>
                     </tr>
                 {{/hits}}
@@ -130,24 +130,30 @@ $isConfig = [
 
 <script type="text/template" id="algolia_merchandisign_table_row">
     <tr data-objectid="{{ objectID }}">
+        <td class="position_cell">
+            <span class="draggable-handle"></span>
+        </td>
         <td class="image_cell"><img src="{{ image_url }}" width="60" /></td>
         <td>{{ objectID }}</td>
         <td>{{{ sku }}}</td>
         <td>{{{ name }}}</td>
         <td>{{ price.USD.default_formated }}</td>
-        <td>
-            <span class="up">
-                <a href="#">⬆️</a> |
-            </span>
-            <span class="unpin_block">
-                Pinned <a href="#" class="unpinIt">UNPIN IT</a>
-            </span>
-            <span class="pin_block">
-                <a href="#" class="pinIt">PIN IT</a>
-            </span>
-            <span class="down">
-                | <a href="#">⬇️</a>
-            </span>
+        <td class="actions">
+            <a href="#" class="unpin_block unpinIt">Click to un-pin</a>
+
+            <div class="pin_block">
+                <a class="arrow up" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14" viewBox="0 0 11 14">
+                        <path fill="#888" fill-rule="nonzero" d="M10.065 6.724c-.038.102-.125.169-.222.169h-3.55v6.834c0 .15-.108.273-.24.273H4.04c-.133 0-.24-.122-.24-.273V6.893H.24c-.098 0-.185-.067-.223-.168a.302.302 0 0 1 .052-.298L4.864.955a.227.227 0 0 1 .17-.08c.065 0 .126.029.17.08l4.809 5.471a.3.3 0 0 1 .052.298z"/>
+                    </svg>
+                    ️</a>
+                <a href="#" class="pinIt">PIN HERE</a>
+                <a class="arrow down" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14" viewBox="0 0 11 14">
+                        <path fill="#888" fill-rule="nonzero" d="M10.065 7.276c-.038-.102-.125-.169-.222-.169h-3.55V.273c0-.15-.108-.273-.24-.273H4.04c-.133 0-.24.122-.24.273v6.834H.24c-.098 0-.185.067-.223.168a.302.302 0 0 0 .052.298l4.794 5.472c.046.051.107.08.17.08a.228.228 0 0 0 .17-.08l4.809-5.471a.3.3 0 0 0 .052-.298z"/>
+                    </svg>
+                </a>
+            </div>
         </td>
     </tr>
 </script>
@@ -158,49 +164,171 @@ $isConfig = [
 
         <div class="info">
             {{{ _highlightResult.name.value }}}
+            <div class="price">
+				{{ price.USD.default_formated }}
+			</div>
         </div>
 
-        <div class="price">
-			<span class="right">
-				{{ price.USD.default_formated }}
-			</span>
-        </div>
+        <a href="#" class="pinIt">
+            PIN THIS PRODUCT
+        </a>
         <div class="algolia-clearfix"></div>
     </div>
+    <hr />
 </script>
 
 <style>
+    #algolia_merchandising_autocomplete {
+        width: 630px;
+        height: 56px;
+        border-radius: 3px;
+        background: #f6f6f6 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"><g fill="none" fill-rule="evenodd" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.778" opacity=".4" transform="translate(1 1)"><circle cx="7.111" cy="7.111" r="7.111"/><path d="M16 16l-3.867-3.867"/></g></svg>') no-repeat 24px;
+        padding-left: 64px;
+        border: solid 1px rgba(204, 204, 204, 0.5);
+    }
+
+    #algolia_merchandising_hits p {
+        line-height: 1.71;
+        color: #333333;
+        font-size: 14px;
+    }
+
+    #algolia_merchandising_hits p.info {
+        background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path fill="#888" fill-rule="nonzero" d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9V9h2v6zm0-8H9V5h2v2z" opacity=".5"/></svg>') no-repeat;
+        padding-left: 40px;
+        margin-top: 20px;
+    }
+
+    .algolia_merchandising_items_table td {
+        padding-top: 14px;
+    }
+
     .algolia_merchandising_items_table em {
         font-style: normal;
         font-weight: bold;
     }
 
     .algolia_merchandising_items_table .image_cell {
-        width: 90px;
+        width: 73px;
+        height: 73px;
+        text-align: center;
+        vertical-align: middle;
+        padding: 8px 8px 5px 8px;
     }
 
-    .algolia_merchandising_items_table tr .unpin_block {
+    .algolia_merchandising_items_table .actions {
+        text-align: center;
+    }
+
+    .algolia_merchandising_items_table .actions .unpin_block {
         display: none;
     }
 
-    .algolia_merchandising_items_table tr .pin_block {
-        display: inline;
+    .algolia_merchandising_items_table .actions a {
+        display: inline-block;
+        height: 43px;
+        line-height: 43px;
+        background-color: rgba(210, 210, 210, 0.24);
+        border: solid 1px #d2d2d2;
+        color: #767676;
+        font-size: 11px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .algolia_merchandising_items_table .actions a:hover {
+        text-decoration: none;
+        background-color: rgba(0,0,0,0.08) !important;
+    }
+
+    .algolia_merchandising_items_table .actions a.pinIt {
+        width: 81px;
     }
 
     .algolia_merchandising_items_table tr.pinned .unpin_block {
-        display: inline;
+        display: inline-block;
+        width: 165px;
+        height: 43px;
+        border-radius: 3px;
+        background: rgba(210, 210, 210, 0.24) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="9" height="12" viewBox="0 0 9 12"><path fill="#767676" fill-rule="nonzero" d="M4.5 9.143c.619 0 1.125-.514 1.125-1.143S5.119 6.857 4.5 6.857 3.375 7.371 3.375 8 3.881 9.143 4.5 9.143zM7.875 4C8.494 4 9 4.514 9 5.143v5.714C9 11.486 8.494 12 7.875 12h-6.75A1.137 1.137 0 0 1 0 10.857V5.143C0 4.514.506 4 1.125 4h5.119V2.857c0-.977-.782-1.771-1.744-1.771s-1.744.794-1.744 1.771H1.688C1.688 1.28 2.947 0 4.5 0c1.553 0 2.813 1.28 2.813 2.857V4h.562z"/></svg>') no-repeat 27px;
+        padding-left: 17px;
+        border: solid 1px #d2d2d2;
+        text-transform: uppercase;
     }
 
     .algolia_merchandising_items_table tr.pinned .pin_block {
         display: none;
     }
 
-    .algolia_merchandising_items_table tr:first-child span.up {
-        display: none;
+    .algolia_merchandising_items_table tr:first-child a.up, .algolia_merchandising_items_table tr:last-child a.down {
+        opacity: 0.5;
+        cursor: initial;
     }
 
-    .algolia_merchandising_items_table tr:last-child span.down {
-        display: none;
+    .algolia_merchandising_items_table td.actions a.arrow {
+        width: 43px;
+    }
+
+    .algolia_merchandising_items_table td.actions a.arrow.up {
+        border-radius: 3px 0 0 3px;
+        border-right: none;
+        margin-right: -4px;
+    }
+
+    .algolia_merchandising_items_table td.actions a.arrow.down {
+        border-radius: 0 3px 3px 0;
+        border-left: none;
+        margin-left: -4px;
+    }
+
+    .algolia_merchandising_items_table {
+        counter-reset: rowNumber;
+    }
+
+    .algolia_merchandising_items_table tr > td:first-child {
+        counter-increment: rowNumber;
+    }
+
+    .algolia_merchandising_items_table tr td:first-child::before {
+        content: counter(rowNumber);
+        min-width: 1em;
+        margin-right: 0.5em;
+        font-size: 16px;
+        color: #333333;
+        opacity: 0.5;
+        font-weight: 600;
+    }
+
+    .algolia_merchandising_items_table .position_cell {
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    .algolia_merchandising_items_table .draggable-handle {
+        cursor: -moz-grab;
+        cursor: -webkit-grab;
+        cursor: move;
+        font-size: 0;
+        vertical-align: middle;
+        display: inline-block;
+        text-decoration: none;
+        margin-top: -3px;
+    }
+
+    .algolia_merchandising_items_table .draggable-handle:before {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-size: 1.8rem;
+        line-height: inherit;
+        color: #9e9e9e;
+        content: '\e617';
+        font-family: 'Admin Icons';
+        vertical-align: middle;
+        display: inline-block;
+        font-weight: normal;
+        overflow: hidden;
+        speak: none;
+        text-align: center;
     }
 
     /* AUTOCOMPLETE HIT */
@@ -208,11 +336,19 @@ $isConfig = [
         position: absolute;
         margin-top: 5px;
         right: 0;
-        width: 100%;
+        width: 888px !important;
         z-index: 10000 !important;
-        border: 1px solid #adadad;
-        border-radius: 5px;
+        border-radius: 3px;
         background: white;
+        box-shadow: 0 12px 23px 0 rgba(63, 63, 68, 0.1), 0 0 0 1px rgba(63, 63, 68, 0.05);
+    }
+
+    .aa-dropdown-menu .header {
+        height: 34px;
+        line-height: 34px;
+        background-color: rgba(91, 83, 76, 0.12);
+        padding-left: 16px;
+        color: #5b534c;
     }
 
     @media (min-width: 992px) {
@@ -239,21 +375,23 @@ $isConfig = [
         clear: both;
     }
 
-    .aa-dataset-products .aa-suggestions {
-        margin: 10px auto 10px auto;
-    }
-
     .aa-dropdown-menu .algoliasearch-autocomplete-hit {
         display: block;
         position: relative;
-        padding: 2px 10px;
+        padding: 10px 24px;
         color: #303030;
         text-align: left;
         text-decoration: none;
+        font-size: 14px;
     }
 
     .aa-dropdown-menu .aa-cursor .algoliasearch-autocomplete-hit {
-        background-color: #f5d6c7;
+        cursor: pointer;
+        background-color: rgba(0,0,0,0.04);
+    }
+
+    .aa-dropdown-menu .aa-cursor .algoliasearch-autocomplete-hit .pinIt {
+        display: inline-block;
     }
 
     .aa-dropdown-menu .algoliasearch-autocomplete-hit em {
@@ -263,25 +401,59 @@ $isConfig = [
 
     .aa-dropdown-menu .algoliasearch-autocomplete-hit .thumb {
         float: left;
-        width: 55px;
+        width: 56px;
     }
 
     .aa-dropdown-menu .algoliasearch-autocomplete-hit .thumb img {
-        width: 55px;
+        width: 56px;
     }
 
     .aa-dropdown-menu .algoliasearch-autocomplete-hit .info {
-        margin-left: 15px;
+        margin-left: 20px;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
         float: left;
-        line-height: 59px;
+        height: 56px;
+        line-height: 28px;
+        color: #04143a;
     }
 
-    .aa-dropdown-menu .algoliasearch-autocomplete-hit .price {
+    .aa-dropdown-menu .algoliasearch-autocomplete-hit .info .price {
+        color: #212b36;
+        opacity: 0.5;
+    }
+
+    .aa-dropdown-menu .algoliasearch-autocomplete-hit .pinIt {
         float: right;
-        line-height: 59px;
+        display: none;
+        width: 140px;
+        height: 36px;
+        line-height: 36px;
+        border-radius: 2px;
+        background-color: rgba(210, 210, 210, 0.24);
+        border: solid 1px #d2d2d2;
+        color: #333333;
+        opacity: 0.56;
+        text-align: center;
+        font-weight: 600;
+        font-size: 12px;
+        text-transform: uppercase;
+        margin: 11px 0;
+    }
+
+    .aa-dropdown-menu .algoliasearch-autocomplete-hit .pinIt:hover {
+         text-decoration: none;
+    }
+
+    .aa-dropdown-menu .aa-suggestion hr {
+        border: none;
+        border-top: 1px solid rgba(204, 204, 204, 0.5);
+        width: 838px;
+    }
+
+    .aa-dropdown-menu .aa-suggestion:last-child hr {
+        display: none;
     }
 
     .algolia-clearfix {
@@ -347,7 +519,7 @@ $isConfig = [
 
             search.start();
 
-            $(document).on('click', '.algolia_merchandising_items_table .pinIt', function(e) {
+            $(document).on('click', '.algolia_merchandising_items_table a.pinIt', function(e) {
                 var $row = $(this).closest('tr');
                 pinIt($row);
 
@@ -355,7 +527,7 @@ $isConfig = [
                 return false;
             });
 
-            $(document).on('click', '.algolia_merchandising_items_table .unpinIt', function(e) {
+            $(document).on('click', '.algolia_merchandising_items_table a.unpinIt', function(e) {
 	            $(this).closest('tr').removeClass('pinned');
 
 	            regeneratePositionsValue();
@@ -364,21 +536,27 @@ $isConfig = [
                 return false;
             });
 
-	        $(document).on('click', '.algolia_merchandising_items_table .up a', function(e) {
-		        var $row = $(this).closest('tr');
+	        $(document).on('click', '.algolia_merchandising_items_table a.up', function(e) {
+		        var $row = $(this).closest('tr'),
+                    $previousRow = $row.prev();
 
-		        $row.prev().insertAfter($row);
-		        pinIt($row);
+		        if ($previousRow.length > 0) {
+			        $previousRow.insertAfter($row);
+			        pinIt($row);
+		        }
 
 		        e.preventDefault();
 		        return false;
 	        });
 
-	        $(document).on('click', '.algolia_merchandising_items_table .down a', function(e) {
-		        var $row = $(this).closest('tr');
+	        $(document).on('click', '.algolia_merchandising_items_table a.down', function(e) {
+		        var $row = $(this).closest('tr'),
+                    $nextRow = $row.next();
 
-		        $row.next().insertBefore($row);
-		        pinIt($row);
+		        if ($nextRow.length > 0) {
+		            $nextRow.insertBefore($row);
+		            pinIt($row);
+                }
 
 		        e.preventDefault();
 		        return false;
@@ -396,6 +574,7 @@ $isConfig = [
                         source: algoliaAdminBundle.autocomplete.sources.hits(index, options),
                         name: 'products',
                         templates: {
+                        	header: '<div class="header">Press <b>enter</b> to select, <b>↑</b> or <b>↓</b> to navigate, <b>esc</b> to dismiss</div>',
                             suggestion: function (hit) {
                                 return template.render(hit);
                             }
