--- a/view/adminhtml/layout/algolia_algoliasearch_queue_index.xml
+++ b/view/adminhtml/layout/algolia_algoliasearch_queue_index.xml
@@ -3,6 +3,11 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
+            <block
+                class="Algolia\AlgoliaSearch\Block\Adminhtml\Queue\Status"
+                name="queue.status"
+                template="queue/status.phtml"
+            />
             <uiComponent name="algolia_algoliasearch_indexing_queue_listing"/>
         </referenceContainer>
     </body>
