--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -1,4 +1,14 @@
-<?php /** @var $this \Algolia\AlgoliaSearch\Block\Adminhtml\Support\Index */ ?>
+<?php /** @var $this \Algolia\AlgoliaSearch\Block\Adminhtml\Support\Index */
+
+$docIllustration = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/support-documentation.svg');
+$comIllustration = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/support-community.svg');
+$vidIllustration = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/support-videotutorials.svg');
+
+$videoDiscover = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-discover.png');
+$videoQueue = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-queue.png');
+$videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-features.png');
+
+?>
 
 <script>
 	var algoliaSearchExtentionsVersion = "<?php echo $this->getExtensionVersion(); ?>"
@@ -9,14 +19,216 @@
     <a href="https://community.algolia.com/magento/doc/m2/upgrade/" target="_blank">How to update?</a>
 </div>
 
-<input type="text" name="q" id="search_box" placeholder="Search for help ..." />
-
-<div>
-    <div class="search_results doc">Doc results</div>
-    <div class="search_results forum"></div>
+<div class="search-box-wrapper">
+    <input type="text" name="q" id="search_box" />
 </div>
 
-<div class="footer">
+<div id="results" class="row">
+    <div class="col-l-5">
+        <div class="heading">
+            <div class="main">
+                Documentation
+            </div>
+
+            <div class="sub">
+                Documentation for all things Algolia for Magento
+            </div>
+        </div>
+
+        <div class="stats doc"></div>
+
+        <div class="links doc"></div>
+
+        <div class="footer doc">
+        </div>
+    </div>
+
+    <div class="col-l-5">
+        <div class="heading">
+            <div class="main">
+                Community Forums
+            </div>
+
+            <div class="sub">
+                Get answers by the Algolia Community
+            </div>
+        </div>
+
+        <div class="stats forum"></div>
+
+        <div class="links forum"></div>
+
+        <div class="footer forum"></div>
+    </div>
+</div>
+
+<div id="landing" class="row">
+    <div class="col-l-4">
+        <div class="heading">
+            <img src="<?php echo $docIllustration ?>" />
+
+            <div class="main">
+                Documentation
+            </div>
+
+            <div class="sub">
+                Documentation for all things Algolia for Magento
+            </div>
+        </div>
+        <div class="links">
+            <a href="https://community.algolia.com/magento/doc/m1/indexing/" target="_blank">
+                <span class="heading">
+                    Indexing
+                </span>
+                <span class="content">
+                    In order to provide fast and relevant search, Algolia restructures your data in a special way, via Indexing.
+                </span>
+            </a>
+            <a href="https://community.algolia.com/magento/doc/m1/indexing-queue/" target="_blank">
+                <span class="heading">
+                    Indexing Queue
+                </span>
+                <span class="content">
+                    The index queue manages all uploads to Algolia. Before your data can be searched, it must be uploaded to Algolia. This process is called indexing, which the extension does automatically - via the queue.
+                </span>
+            </a>
+            <a href="https://community.algolia.com/magento/doc/m1/customize-autocomplete/" target="_blank">
+                <span class="heading">
+                    Autocomplete menu
+                </span>
+                <span class="content">
+                    Customize the autocomplete drop-down menu which appears underneath the search bar on your Magento site.
+                </span>
+            </a>
+            <a href="https://community.algolia.com/magento/doc/m1/customize-backend/" target="_blank">
+                <span class="heading">
+                    Customize the extension
+                </span>
+                <span class="content">
+                    In this guide you’ll learn how to attach hooks to the events fired by the Algolia extension. It should only take a few minutes. Let’s get started!
+                </span>
+            </a>
+            <a href="https://community.algolia.com/magento/doc/faq-support-data/" target="_blank">
+                <span class="heading">
+                    Troubleshooting
+                </span>
+                <span class="content">
+                    Let’s say you’re getting an error with your data or search results. It may be an error that other Magento/Algolia users experience.
+                </span>
+            </a>
+        </div>
+
+        <a href="https://community.algolia.com/magento/doc/m2/getting-started/" class="footer" target="_blank">
+            See all documentation ...
+        </a>
+    </div>
+
+    <div class="col-l-4">
+        <div class="heading">
+            <img src="<?php echo $comIllustration ?>" />
+
+            <div class="main">
+                Community Forums
+            </div>
+
+            <div class="sub">
+                Get answers by the Algolia Community
+            </div>
+        </div>
+        <div class="links">
+            <a href="https://discourse.algolia.com/t/magento-2-autocomplete-results-configurable-product-prices-showing-0-00/5477" target="_blank">
+                <span class="heading">
+                    Autocomplete results configurable product prices showing £0.00
+                </span>
+                <span class="content">
+                    We are using the official Algolia extension 1.7.0 on Magento 2.2.4 CE. For some reason our Magento 2 store’s autocomplete search results (the dropdown box below the search input field) is now showing zero prices for some Configurable products (where until the day before yesterday) it would show a range from lowest to highest.
+                </span>
+            </a>
+            <a href="https://discourse.algolia.com/t/magento2-custom-searchable-attributes/1833" target="_blank">
+                <span class="heading">
+                    Custom Searchable attributes
+                </span>
+                <span class="content">
+                    As per instructions found at Algolia we've tried to set a list of Indexable attributes to sent from Magento 2.1.7 to Algolia.
+                </span>
+            </a>
+            <a href="https://discourse.algolia.com/t/m2-1-7-js-error-on-clean-install/2034" target="_blank">
+                <span class="heading">
+                    M2.1.7 JS Error on Clean install
+                </span>
+                <span class="content">
+                    Just installed Algolia for Magento 2 via composer, run setup:upgrade and deployed files and cleared caches (site is still in developer mode).
+                </span>
+            </a>
+            <a href="https://discourse.algolia.com/t/layered-navigation-on-search-result-pages/4619" target="_blank">
+                <span class="heading">
+                    Layered Navigation on search result pages
+                </span>
+                <span class="content">
+                    I have an issue with layered navigation (Filters) on Search result pages within Magento where Instant search is not being used.
+                </span>
+            </a>
+            <a href="https://discourse.algolia.com/t/magento-in-the-url/2364" target="_blank">
+                <span class="heading">
+                    Magento in the URL
+                </span>
+                <span class="content">
+                    My Algolia dashboard indexed URL’s not updated after 6 hours - still contain ref to “bad” URL’s. Have performed magento indexer:reindex.
+                </span>
+            </a>
+        </div>
+
+        <a href="" class="footer" target="_blank">
+            See the forum ...
+        </a>
+    </div>
+
+    <div class="col-l-4">
+        <div class="heading">
+            <img src="<?php echo $vidIllustration ?>" />
+
+            <div class="main">
+                Video Tutorials
+            </div>
+
+            <div class="sub">
+                We prepared a few video tutorials to get you started
+            </div>
+        </div>
+        <div class="videos">
+            <a href="https://www.youtube.com/watch?v=1vxnisyxgFU" target="_blank" class="video">
+                <div class="img">
+                    <img src="<?php echo $videoDiscover ?>" />
+                </div>
+                <div class="description">
+                    Discover the extension
+                </div>
+            </a>
+            <a href="https://www.youtube.com/watch?v=0V1BSKlCm10" target="_blank" class="video">
+                <div class="img">
+                    <img src="<?php echo $videoQueue ?>" />
+                </div>
+                <div class="description">
+                    Understand Indexing Queue
+                </div>
+            </a>
+            <a href="https://www.youtube.com/watch?v=qzaLrHz67U4" target="_blank" class="video">
+                <div class="img">
+                    <img src="<?php echo $videoFeatures ?>" />
+                </div>
+                <div class="description">
+                    See all extra features
+                </div>
+            </a>
+        </div>
+
+        <a href="https://www.youtube.com/playlist?list=PLuHdbqhRgWHLZ8pIwBT0B2JNxdoSfCWKY&disable_polymer=true" class="footer" target="_blank">
+            See more tutorials ...
+        </a>
+    </div>
+</div>
+
+<div class="contact-us">
     <?php if ($this->isExtensionSupportEnabled()): ?>
         Didn't find what you were looking for?
         <a href="<?php echo $this->getUrl('*/*/contact'); ?>">
