--- a/view/adminhtml/web/css/support.css
+++ b/view/adminhtml/web/css/support.css
@@ -2,12 +2,188 @@
 	display: none;
 }
 
-.ais-search-box {
-	text-align: center;
-	margin-bottom: 20px;
+.search-box-wrapper {
+	background-color: #f5f5f5;
+	width: 100%;
+	height: 64px;
+	padding: 12px 20px;
 }
 
-.search_results {
-	width: 49%;
+.search-box-wrapper .ais-search-box {
+	position: relative;
+}
+
+.search-box-wrapper input[type="text"] {
+	width: 587px;
+	height: 40px;
+	padding-left: 56px;
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
+	color: #333;
+}
+
+.search-box-wrapper .ais-search-box--magnifier-wrapper {
+	position: absolute;
+	width: 20px;
+	left: 18px;
+	top: 10px;
+}
+
+.search-box-wrapper .ais-search-box--magnifier-wrapper path {
+	fill: #777;
+}
+
+.search-box-wrapper .ais-search-box--reset-wrapper {
+	display: block;
+	position: absolute;
+	top: 13px;
+	left: 554px;
+}
+
+.search-box-wrapper .ais-search-box--reset-wrapper button {
+	border: none;
+	padding: 0;
+	background: none;
+}
+
+.search-box-wrapper .ais-search-box--reset-wrapper svg {
+	width: 15px;
+}
+
+.search-box-wrapper .ais-search-box--reset-wrapper path {
+	fill: #777;
+}
+
+/** LANDING PAGE **/
+
+.col-l-4, .col-l-5 {
+	padding: 0 20px;
+}
+
+.col-l-4 > .heading, .col-l-5 > .heading {
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+}
+
+.col-l-4 > .heading img, .col-l-5 > .heading img {
+	margin-top: 28px;
+}
+
+.col-l-4 > .heading .main, .col-l-5 > .heading .main {
+	font-size: 25px;
+	line-height: 1.25;
+	color: #41362f;
+	margin-top: 19px;
+}
+
+.col-l-4 > .heading .sub, .col-l-5 > .heading .sub {
+	font-size: 14px;
+	color: #333;
+	margin-top: 10px;
+	margin-bottom: 15px;
+}
+
+.links {
+	margin-top: 15px;
+}
+
+.links a {
+	display: block;
+	margin-bottom: 10px;
+}
+
+.links a:hover {
+
+}
+
+.links a:hover .content {
+	text-decoration: none; /** DOESNT WORK FOR SOME REASON **/
+}
+
+.links a span {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.links a .heading {
+	display: block;
+	font-weight: bold;
+	color: #007bdb;
+	line-height: 35px;
+	height: 35px;
+}
+
+.links a .content {
+	display: block;
+	color: #505050;
+	line-height: 20px;
+	margin-top: -4px;
+	height: 20px;
+}
+
+a.footer {
+	display: block;
+	margin-top: 25px;
+}
+
+#landing .col-l-4 .videos {
+	margin-top: 15px;
+}
+
+#landing .col-l-4 .videos .video {
+	display: block;
+	margin-bottom: 10px;
+}
+
+#landing .col-l-4 .videos .video::after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+#landing .col-l-4 .videos .video .img {
+	width: 130px;
 	float: left;
+}
+
+#landing .col-l-4 .videos .video .description {
+	float: left;
+	margin-left: 10px;
+	font-size: 14px;
+	margin-top: 26px;
+	color: #333;
+}
+
+#landing .col-l-4 .videos .video::after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+.links em, .links .algolia-docsearch-suggestion--highlight {
+	font-style: normal;
+	background-blend-mode: multiply;
+	background-image: linear-gradient(to bottom, rgba(198, 220, 245, 0.4), rgba(198, 220, 245, 0.4));
+}
+
+.ais-hits__empty > a {
+	display: inline;
+}
+
+.stats {
+	font-size: 12px;
+	color: #505050;
+	margin-top: 8px;
+}
+
+.contact-us {
+	font-size: 14px;
+	margin-top: 70px;
+	border-top: 2px solid #cccccc;
+	padding-top: 15px;
+}
+
+#results {
+	display: none;
 }
