plan check, retention days, and click analytics

--- a/view/adminhtml/web/css/analytics.css
+++ b/view/adminhtml/web/css/analytics.css
@@ -40,6 +40,10 @@
     margin-bottom: 3rem;
 }
 
+.algoliasearch-analytics-overview .top-thirds {
+    padding-top: 3rem;
+}
+
 .algoliasearch-analytics-overview .row.halves,
 .algoliasearch-analytics-overview .row.thirds {
     display: flex;
@@ -72,6 +76,11 @@
 .algoliasearch-analytics-overview .stat {
     font-size: 2em;
 }
+
+.algoliasearch-analytics-overview .sub {
+    margin-top: 1rem;
+}
+
 
 .algoliasearch-analytics-overview .admin__field-tooltip {
     margin-top: -1px;
