--- a/view/adminhtml/templates/analytics/ui/graph.phtml
+++ b/view/adminhtml/templates/analytics/ui/graph.phtml
@@ -1,4 +1,4 @@
-<?php /** @var $this Algolia\AlgoliaSearch\Block\Adminhtml\Analytics\Diagrams\Searches */ ?>
+<?php /** @var $this  */ ?>
 <?php if (count($this->getAnalytics())): ?>
 <div id="algolia-analyatics-diagram"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -12,9 +12,16 @@
             <?php foreach ($this->getAnalytics() as $item): ?>
             ['<?php echo $item['formatted'] ?>', <?php echo $item['count'] ?>,
                 "<div style='padding: 1.5rem; line-height: 18px;'><strong style='font-size: 14px;'><?php echo $item['formatted'] ?></strong><br/><br/>" +
-                "<p>Searches: <br/><strong style='color: #5468ff; font-size: 16px;'><?php echo $item['count'] ?></strong></p>" +
-                "<p>Users: <br/><strong style='color: #3a46a1; font-size: 16px;'><?php echo $item['users'] ?></strong></p>" +
-                "<p>No Result Rating: <br/><strong style='color: #3ab2bd; font-size: 16px;'><?php echo round($item['rate'] * 100, 2) . '%' ?></strong></p></div>",
+                "<p>Searches: <strong style='color: #5468ff; padding-left: 3px;'><?php echo $item['count'] ?></strong></p>" +
+                "<p>Users: <strong style='color: #3a46a1; padding-left: 3px;'><?php echo $item['users'] ?></strong></p>" +
+                "<p>No Result Rate: <strong style='color: #3ab2bd; padding-left: 3px;'><?php echo round($item['rate'] * 100, 2) . '%' ?></strong></p>" +
+                <?php if (isset($item['ctr'])): ?>
+                    "<br/>" +
+                    "<p>CTR: <strong style='color: #5468ff; padding-left: 3px;'><?php echo round($item['ctr'] * 100, 2) . '%' ?></strong></p>" +
+                    "<p>Conversion Rate: <strong style='color: #3a46a1; padding-left: 3px;'><?php echo round($item['conversion'] * 100, 2) . '%' ?></strong></p>" +
+                    "<p>Avg Click Position: <strong style='color: #3ab2bd; padding-left: 3px;'><?php echo $item['clickPos'] ? $item['clickPos'] : '-' ?></strong></p>" +
+                <?php endif ?>
+                "</div>",
                 'stroke-opacity: 0; fill-opacity: 0.75;'
             ],
             <?php endforeach ?>
