--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -229,9 +229,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
 <div class="contact-us">
     <?php if ($this->isExtensionSupportEnabled()): ?>
         Didn't find what you were looking for?
-        <a href="<?php echo $this->getUrl('*/*/contact'); ?>">
-            Contact Us.
-        </a>
+        <a href="<?php echo $this->getUrl('*/*/contact'); ?>">Contact Us</a>.
     <?php else: ?>
         Consider <a href="https://www.algolia.com/pricing" target="_blank">upgrading your plan</a>
         to get direct and fast email help by Algolia experts.
