--- a/view/adminhtml/templates/analytics/ui/graph.phtml
+++ b/view/adminhtml/templates/analytics/ui/graph.phtml
@@ -14,11 +14,11 @@
                 "<div style='padding: 1.5rem; line-height: 18px;'><strong style='font-size: 14px;'><?php echo $item['formatted'] ?></strong><br/><br/>" +
                 "<p>Searches: <strong style='color: #5468ff; padding-left: 3px;'><?php echo $item['count'] ?></strong></p>" +
                 "<p>Users: <strong style='color: #3a46a1; padding-left: 3px;'><?php echo $item['users'] ?></strong></p>" +
-                "<p>No Result Rate: <strong style='color: #3ab2bd; padding-left: 3px;'><?php echo round($item['rate'] * 100, 2) . '%' ?></strong></p>" +
+                "<p>No Result Rate: <strong style='color: #3ab2bd; padding-left: 3px;'><?php echo round((int) $item['rate'] * 100, 2) . '%' ?></strong></p>" +
                 <?php if (isset($item['ctr'])): ?>
                     "<br/>" +
-                    "<p>CTR: <strong style='color: #5468ff; padding-left: 3px;'><?php echo round($item['ctr'] * 100, 2) . '%' ?></strong></p>" +
-                    "<p>Conversion Rate: <strong style='color: #3a46a1; padding-left: 3px;'><?php echo round($item['conversion'] * 100, 2) . '%' ?></strong></p>" +
+                    "<p>CTR: <strong style='color: #5468ff; padding-left: 3px;'><?php echo round((int) $item['ctr'] * 100, 2) . '%' ?></strong></p>" +
+                    "<p>Conversion Rate: <strong style='color: #3a46a1; padding-left: 3px;'><?php echo round((int) $item['conversion'] * 100, 2) . '%' ?></strong></p>" +
                     "<p>Avg Click Position: <strong style='color: #3ab2bd; padding-left: 3px;'><?php echo $item['clickPos'] ? $item['clickPos'] : '-' ?></strong></p>" +
                 <?php endif ?>
                 "</div>",
