Use dedicated indices + wording

--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -44,7 +44,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
     <div class="col-l-5">
         <div class="heading">
             <div class="main">
-                Community Forums
+                Community Forum
             </div>
 
             <div class="sub">
@@ -126,7 +126,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             <img src="<?php echo $comIllustration ?>" />
 
             <div class="main">
-                Community Forums
+                Community Forum
             </div>
 
             <div class="sub">
